--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
+.vscode/c_cpp_properties.json
+.vscode/launch.json
+.vscode/ipch
+.vscode/*
+.pio/
+.pio/*
+.pio
+.pioenvs/
+.piolibdeps/
+.clang_complete
+.gcc-flags.json
+
+
 # Prerequisites
 *.d
 
